# Data_agg

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
config/: sources.json
src/data_agg/: __init__.py  charts.py  cli.py  config.py  holdings.py  models.py  signals.py  storage.py  universe.py  utils.py  valuations.py
tests/: helpers.py  test_cli_dataset_inference.py  test_holdings_parser.py  test_replay.py  test_stale_fallback.py  test_universe_diff.py
tests/fixtures/: forward_pe_2026-04-20.json  ivv_snapshot_2026-04-19.json  ivv_snapshot_2026-04-20.json
