[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-agg"
version = "0.1.0"
description = "Resilient public-source financial pipeline scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
data-agg = "data_agg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
